[package]
name = "twitter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ['json'] }
serde =  "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ['rt-multi-thread'] }
oauth = { version = "0.6", package = "oauth1-request" }
dirs = "6.0.0"
toml = "0.9.5"
